# msg

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  README.rst  codemeta.json  paper.bib  paper.md
data/filters/: filter.py
data/passbands/: pb-Generic-Johnson.B-Vega.h5  pb-Generic-Johnson.U-Vega.h5  pb-Generic-Johnson.V-Vega.h5
docs/: .readthedocs.yaml  Makefile  requirements.txt  sg-demo.h5
docs/joss/: build_docker.sh  paper.bib  paper.md
docs/other/: msg-classes.drawio  msg-classes.v1.0.drawio  msg-classes.v1.1.drawio  (+2 more)
lib/: .gitignore
python/: README.rst  libcmsg.dylib  pyproject.toml  setup.py
python/msg/: libcmsg.h  msg.pyx
python/pymsg/: .gitignore  __init__.py  photgrid.py  specgrid.py
python/src/pymsg/: __init__.py  photgrid.py  specgrid.py
scripts/: cmsg_link  fmsg_link  msg_link
src/: axis_m.fypp  colrad_m.fypp  const_m.fypp  convert_radint.fypp  cubint_m.fypp  dyn_radint_m.fypp  dyn_specint_m.fypp  dyn_specnode_m.fypp  ferre_to_specint.fypp  fit_m.fypp  forum  grid_interp_m.fypp  grid_m.fypp  interp_m.fypp  libcmsg.fypp  libcmsg.h  limb_m.fypp  linfit_m.fypp  make_photgrid.fypp  make_radgrid.fypp  make_radint.fypp  make_specgrid.fypp  make_specint.fypp  make_specrad.fypp  math_m.fypp  ncubic_m.fypp  ngrid_m.fypp  passband_m.fypp  photgrid_m.fypp  photint_m.fypp  radgrid_c.fypp  radgrid_factory_m.fypp  radgrid_m.fypp  radint_factory_m.fypp  radint_m.fypp  radnode_m.fypp  specgrid_factory_m.fypp  specgrid_m.fypp  specint_factory_m.fypp  specint_m.fypp  (+18 more)
test/: Makefile  pb-Generic-Johnson.V-Vega.h5  run_tests.sh  sg-demo.h5
(+500 files in other folders)
