[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymsg"
version = "1.0"
authors = [
  { name="Rich Townsend", email="rhtownsend@wisc.edu" },
]
description = "Python interface to MSG"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
