[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymsg"
version = "1.1rc2"
authors = [
  { name="Rich Townsend", email="rhtownsend@wisc.edu" },
]
description = "Python interface to MSG"
readme = "README.rst"
requires-python = ">=3.6"
dependencies = ["numpy>=1.12.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
