[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymsg"
version = "dev"
authors = [
  { name="Rich Townsend", email="rhtownsend@wisc.edu" },
]
description = "Python interface to MSG"
readme = "README.rst"
requires-python = ">=3.7"
dependencies = ["numpy>=1.15.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
